logs/powerline-kubernetes.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/kubernetes'...
Listing './lib/python3.5/site-packages/kubernetes/models'...
Listing './lib/python3.5/site-packages/kubernetes/models/unversioned'...
Listing './lib/python3.5/site-packages/kubernetes/models/v1'...
Listing './lib/python3.5/site-packages/kubernetes/models/v1alpha1'...
Listing './lib/python3.5/site-packages/kubernetes/models/v1beta1'...
Listing './lib/python3.5/site-packages/kubernetes/models/v2alpha1'...
Listing './lib/python3.5/site-packages/kubernetes/utils'...
Listing './lib/python3.5/site-packages/kubernetes_py-1.5.6.29.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/powerline'...
Listing './lib/python3.5/site-packages/powerline/bindings'...
Listing './lib/python3.5/site-packages/powerline/bindings/awesome'...
Listing './lib/python3.5/site-packages/powerline/bindings/bar'...
Listing './lib/python3.5/site-packages/powerline/bindings/bash'...
Listing './lib/python3.5/site-packages/powerline/bindings/fish'...
Listing './lib/python3.5/site-packages/powerline/bindings/i3'...
Listing './lib/python3.5/site-packages/powerline/bindings/ipython'...
Listing './lib/python3.5/site-packages/powerline/bindings/lemonbar'...
Listing './lib/python3.5/site-packages/powerline/bindings/pdb'...
Listing './lib/python3.5/site-packages/powerline/bindings/qtile'...
Listing './lib/python3.5/site-packages/powerline/bindings/rc'...
Listing './lib/python3.5/site-packages/powerline/bindings/shell'...
Listing './lib/python3.5/site-packages/powerline/bindings/tcsh'...
Listing './lib/python3.5/site-packages/powerline/bindings/tmux'...
Listing './lib/python3.5/site-packages/powerline/bindings/vim'...
Listing './lib/python3.5/site-packages/powerline/bindings/vim/autoload'...
Listing './lib/python3.5/site-packages/powerline/bindings/vim/autoload/powerline'...
Listing './lib/python3.5/site-packages/powerline/bindings/vim/plugin'...
Listing './lib/python3.5/site-packages/powerline/bindings/wm'...
Listing './lib/python3.5/site-packages/powerline/bindings/zsh'...
Listing './lib/python3.5/site-packages/powerline/commands'...
Listing './lib/python3.5/site-packages/powerline/config_files'...
Listing './lib/python3.5/site-packages/powerline/config_files/colorschemes'...
Listing './lib/python3.5/site-packages/powerline/config_files/colorschemes/ipython'...
Listing './lib/python3.5/site-packages/powerline/config_files/colorschemes/pdb'...
Listing './lib/python3.5/site-packages/powerline/config_files/colorschemes/shell'...
Listing './lib/python3.5/site-packages/powerline/config_files/colorschemes/tmux'...
Listing './lib/python3.5/site-packages/powerline/config_files/colorschemes/vim'...
Listing './lib/python3.5/site-packages/powerline/config_files/themes'...
Listing './lib/python3.5/site-packages/powerline/config_files/themes/ipython'...
Listing './lib/python3.5/site-packages/powerline/config_files/themes/pdb'...
Listing './lib/python3.5/site-packages/powerline/config_files/themes/shell'...
Listing './lib/python3.5/site-packages/powerline/config_files/themes/tmux'...
Listing './lib/python3.5/site-packages/powerline/config_files/themes/vim'...
Listing './lib/python3.5/site-packages/powerline/config_files/themes/wm'...
Listing './lib/python3.5/site-packages/powerline/dist'...
Listing './lib/python3.5/site-packages/powerline/dist/systemd'...
Listing './lib/python3.5/site-packages/powerline/lib'...
Listing './lib/python3.5/site-packages/powerline/lib/vcs'...
Listing './lib/python3.5/site-packages/powerline/lib/watcher'...
Listing './lib/python3.5/site-packages/powerline/lint'...
Listing './lib/python3.5/site-packages/powerline/lint/markedjson'...
Listing './lib/python3.5/site-packages/powerline/listers'...
Listing './lib/python3.5/site-packages/powerline/matchers'...
Listing './lib/python3.5/site-packages/powerline/matchers/vim'...
Listing './lib/python3.5/site-packages/powerline/matchers/vim/plugin'...
Listing './lib/python3.5/site-packages/powerline/renderers'...
Listing './lib/python3.5/site-packages/powerline/renderers/ipython'...
Listing './lib/python3.5/site-packages/powerline/renderers/shell'...
Listing './lib/python3.5/site-packages/powerline/segments'...
Listing './lib/python3.5/site-packages/powerline/segments/common'...
Listing './lib/python3.5/site-packages/powerline/segments/vim'...
Listing './lib/python3.5/site-packages/powerline/segments/vim/plugin'...
Listing './lib/python3.5/site-packages/powerline/selectors'...
Listing './lib/python3.5/site-packages/powerline_kubernetes'...
Compiling './lib/python3.5/site-packages/powerline_kubernetes/segments.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (segments.py, line 12)
Listing './lib/python3.5/site-packages/powerline_kubernetes-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/powerline_status-2.6.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/uuid-1.30.egg-info'...
Compiling './lib/python3.5/site-packages/uuid.py'...
***   File "./lib/python3.5/site-packages/uuid.py", line 138
    if not 0 <= time_low < 1<<32L:
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
